tests/ui/fail/duplicated_id.rs
use leptos_unique_ids::leptos_unique_ids;

#[leptos_unique_ids("foo", "bar", "foo")]
pub enum Ids {}

fn main() {}
