tests/ui/fail/duplicated_id.stderr
error: Duplicated string literal found.
 --> ui/fail/duplicated_id.rs:3:1
  |
3 | #[leptos_unique_ids("foo", "bar", "foo")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `leptos_unique_ids` (in Nightly builds, run with -Z macro-backtrace for more info)
